2008-04-22  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8040: Bug: Wrong check on creating folders in filelist makes them unaccessible (thanks to Moreno Feltscher)

2008-04-16  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #4186 (correction): cropping didn't work for IM4/5 and GM (thanks to Helmut Hummel)

2008-04-11  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8078: enhance debug stack trace reporting

2008-04-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #8064: Split does not work with returnKey = 0 (thanks to Dirk Weise)

2008-04-09  Jeff Segars  <jeff@webempoweredchurch.org>

	* Fixed bug #6873: Missing icon for not in menu, access-restricted pages

2008-04-07  Dmitry Dulepov  <dmitry@typo3.org>

	* Rolled back last three bugfixes because they are seen as new feature and may not appear in maintenace release

2008-04-07  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #8005: Linking across domains does not work with nested domains
	* Fixed bug #7839: Linking between domains in the pagetree with checkRootline does not work with menus
	* Fixed bug #3491: Linking between domains in the pagetree ignores simulate static documents

2008-04-06  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7992: rtehtmlarea does not work with Firefox 3 Beta 5

2008-04-03  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #4575: Changes in alternative page language does not clear cache
	* Fixed bug #4768: Missing is_array() check in tslib_fe::getStorageSiterootPids()

2008-03-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #7759: XCLASSing USER_INT objects does not work

2008-03-26  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #7864: htmlArea RTE drag & drop imagebrowser does not work correctly in IE in TYPO3 4.1

2008-03-21  Ingmar Schlecht  <ingmar@typo3.org>

	* Fixed bug #7850: error in publish.php if errors in TCE should be shown (thanks to Daniel Pötzinger)

2008-03-20  Dmitry Dulepov  <dmitry@typo3.org>
