@@ -1,3 +1,7 @@
+2008-04-22  Oliver Hader  <oliver@typo3.org>
+
+	* Fixed bug #8148: IRRE - Expanded or collapsed state of new child records is not handled correctly
+
 2008-04-22  Dmitry Dulepov  <dmitry@typo3.org>
 
 	* Fixed bug #8040: Bug: Wrong check on creating folders in filelist makes them unaccessible (thanks to Moreno Feltscher)
